--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -102,7 +102,7 @@
 
   <script src="{% static "/plugins/jquery/jquery.min.js" %}"></script>
   <script src="{% static "/plugins/jquery/jquery-ui.min.js" %}"></script>
-  <script src="{% static "/plugins/bootstrap/js/bootstrap.min.js" %}"></script>
+  <script src="{% static "/plugins/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
   <script src="{% static "/pickadate/jquery.datetimepicker.full.min.js" %}"></script>
   <script src="{% static "/plugins/toastr/toastr.min.js" %}"></script>
 
