--- a/app_chat/templates/video_room_detail_students.html
+++ b/app_chat/templates/video_room_detail_students.html
@@ -268,6 +268,8 @@ Live Class {{object.title}}
                     return Twilio.Video.connect(data.token, videoOptions);
                 }).then(_room => {
 
+                    $("#local").empty();
+
                     room = _room;
                     room.participants.forEach(participantConnected);
                     room.on('participantConnected', participantConnected);
@@ -364,7 +366,7 @@ Live Class {{object.title}}
                     }
                 }
 
-                $("#local").html(track.attach());
+                $("#local").append(track.attach());
 
                 //$("#btn-full-screen").trigger('click');
             }
