--- a/app_public/templates/legal/legal.html
+++ b/app_public/templates/legal/legal.html
@@ -24,6 +24,7 @@
                 <div class="page-content">
 
                     <div class="accordion" id="accordionExample">
+
                         <div class="card">
                             <div class="card-header bg-secondary p-1 text-white" id="headingOne">
                                 <h2 class="mb-0">
@@ -37,7 +38,15 @@
                             <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-                                    Terms of Service..
+                                    This agreement binds you (student, user, or participant) or the company you
+                                    represent to the terms and conditions set forth herein in connection with your use
+                                    of NYC Construction Safety Training (NYCCST) software, services, or other offerings.
+                                    By using any of the NYCCST products or by enrolling or registering with NYCCST
+                                    (either via web or other forms of enrollment) you agree to become bond by the terms
+                                    and conditions listed on this website and on the NYCCST Student Manual. All
+                                    prospective students are to review the terms and conditions listed on the NYCCST
+                                    website as well as the NYCCST Student Manual prior to enrollment. If you do not
+                                    agree to the terms and conditions do not register or use NYCCST services/products.
                                 </div>
                             </div>
                         </div>
@@ -91,7 +100,7 @@
                                 data-parent="#accordionExample">
                                 <div class="card-body">
 
-                                    <p >
+                                    <p>
                                         NYC Construction Safety Training, LLC does not tolerate discrimination, nor
                                         tolerate
                                         explicit references of a discriminatory nature, based on gender, gender
@@ -140,7 +149,27 @@
                             <div id="collapse5" class="collapse" aria-labelledby="heading5"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-                                    User Identity / Integrity Agreement
+                                    You understand that by using any f the features of the NYC Construction Safety
+                                    Training (NYCCST) websites and services, you act at your own risk, and represent and
+                                    warrant that (a) you are the enrolled "Student," "User," or "Participant" who is
+                                    authorized to take the applicable course/exam and (b) the certification and/or
+                                    identification you have provided is completely accurate and you fully understand
+                                    that any falsification will be a violation of these terms of use and may be reported
+                                    to the appropriate authority or test sanctioning organization. You agree that you
+                                    will be held accountable for any and all infractions associated with identity
+                                    misrepresentation and agree to participate in the in the disciplinary process
+                                    enforced by NYCCST and/or other relevant authority or test sanctioning organization.
+                                    You also certify that you are not accepting or utilizing external help to complete
+                                    the course exam, and are the applicable course/exam taker who is responsible for any
+                                    violation of NYCCST rules and standards. You agree to participate in the
+                                    disciplinary process supported by NYCCST and/or other relevant authority/ test
+                                    sanctioning organization should any party make such request of you in connection
+                                    with any violation of course or exam rules. You acknowledge that your computer
+                                    screen may be monitored, viewed, recorded, or otherwise audited to ensure the
+                                    integrity of the exam and course participation. You understand that such data, along
+                                    with your test answers, will be stored, retrieved, analyzed, and shared with NYCCST
+                                    staff and/or other relevant test sanctioning organization or authority, at the
+                                    discretion of NYCCST, to ensure the integrity of the courses and exams.
                                 </div>
                             </div>
                         </div>
@@ -164,7 +193,52 @@
                             </div>
                         </div>
 
-                        <!-- END heading5 -->
+                        <!-- END heading6 -->
+
+                        <div class="card">
+                            <div class="card-header bg-secondary p-1 text-white" id="heading7">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link text-white" type="button" data-toggle="collapse"
+                                        data-target="#heading7" aria-expanded="false" aria-controls="collapse7">
+                                        Refund Policy
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="heading7" class="collapse" aria-labelledby="heading7"
+                                data-parent="#accordionExample">
+                                <div class="card-body">
+                                    In order to receive a full refund a participant must follow the below guidelines.
+
+                                    To receive a full refund please send an email to <a class="text-info"
+                                        href="mailto:Arperalta@Yahoo.com">Arperalta@Yahoo.com</a> no less than 5
+                                    business days prior to the start of a scheduled learning event.
+
+                                    The email must include participant’s full name and the course the participant
+                                    desires to cancel. If a cancellation request email is not received earlier than 5
+                                    days prior to the start of the scheduled learning event NYCCST holds the right to
+                                    refuse the refund.
+
+                                    Self-Paced courses are not eligible for refund.
+
+                                    NYCCST will not issue a refund for courses attended where the participant failed to
+                                    complete or pass the course test or other form of final assessment.
+
+                                    NYCCST does not issue refunds for courses missed due to disciplinary action.
+
+                                    NYCCST does not issue partial refunds. No refunds are issued to participants who
+                                    failed to withdraw or reschedule a course or missed part or all of a scheduled
+                                    learning event. For course live sessions, all participants are expected to be
+                                    present for the entirety of the live session. If a participant must cancel or
+                                    reschedule a course that includes live sessions please send an email to
+                                    <a class="text-info" href="mailto:Arperalta@Yahoo.com">Arperalta@Yahoo.com</a>. Participants have the right to reschedule a course up to 5 days
+                                    after the course start date.
+                                    Attachments area
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- END heading7 -->
 
                     </div>
                 </div>
