--- a/students/templates/registration/signup_form.html
+++ b/students/templates/registration/signup_form.html
@@ -63,6 +63,17 @@
                             </div>
                         </div>
 
+                        <div class="row my-2">
+                            <div class="col">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="" required name="terms" id="termsCheck">
+                                    <label class="form-check-label" for="termsCheck">
+                                        By creating an account you are agreeing to adhere to the NYCCST Terms of Service
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="row">
                             <div class="col-md-6">
 
@@ -70,7 +81,7 @@
                             </div>
 
                             <div class="col-md-6 text-right">
-                                <div class="clear" style="padding: 30px;">{% trans "Already an account ?" %} <a
+                                <div class="clear" style="padding: 30px;">{% trans "Already have an account?" %} <a
                                         href="{% url 'login' %}">{% trans 'Log in' %}</a>.</div>
                             </div>
                         </div>
@@ -96,8 +107,8 @@
 <script>
     $(document).ready(function () {
 
-        $("p input[type='checkbox']").css('width', 'auto');
-        
+        $("form input[type='checkbox']").css('width', 'auto');
+
         $("form input").css('float', 'none');
 
         $("#btnRemoveImage").click(function () {
@@ -131,8 +142,7 @@
                     $("#id_image").val(response);
                 }
             },
-            complete: function (xhr) {
-            }
+            complete: function (xhr) {}
         });
 
     });
