--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -65,9 +65,13 @@
           </a>
 
           <div class="dropdown-menu dropdown-menu-right">
+
+           <a class="dropdown-item" href="{% url "student_manual_detail" %}">Student Manual</a>
+
             {% if request.user.is_authenticated %}
             <a class="dropdown-item" href="{% url "logout" %}">Sign out</a>
             {%endif%}
+            
           </div>
         </li>
       </ul>
