--- a/students/templates/registration/signup_form.html
+++ b/students/templates/registration/signup_form.html
@@ -66,9 +66,13 @@
                         <div class="row my-2">
                             <div class="col">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" required name="terms" id="termsCheck">
+                                    <input class="form-check-input" type="checkbox" value="" required name="terms"
+                                        id="termsCheck">
                                     <label class="form-check-label" for="termsCheck">
-                                        By creating an account you are agreeing to adhere to the NYCCST Terms of Service
+                                        <a href="{% url 'legal_detail' %}">
+                                            By creating an account you are agreeing to adhere to the NYCCST Terms of
+                                            Service
+                                        </a>
                                     </label>
                                 </div>
                             </div>
