--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -10,6 +10,18 @@
     <link href="{% static '/css/style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static "/plugins/toastr/toastr.min.css" %}">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBMW2QHSJ4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-HBMW2QHSJ4');
+    </script>
 
 </head>
 
@@ -153,7 +165,7 @@
                 <div class="row">
                     <div class="col-12">
 
-                      
+
                         <p><a href="#">
                                 Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC
                             </a>
@@ -168,7 +180,7 @@
             <div class="contact-info">
                 <a href="#">Support</a>
                 <a href="{% url 'legal_detail' %}">Legal</a>
-                 <a href="{% url 'student_manual_detail' %}">Student Manual</a>
+                <a href="{% url 'student_manual_detail' %}">Student Manual</a>
                 <a href="#">Sitemap</a>
             </div>
 
