--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -14,9 +14,20 @@
   <link href="{% static "/plugins/summernote/summernote.min.css" %}" rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="192x192" href="{% static "/images/logo5.png" %}">
-  <style>
 
-  </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBMW2QHSJ4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-HBMW2QHSJ4');
+  </script>
+
 
 </head>
 
