--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -10,13 +10,22 @@
   <link href="{% static "/css/teacher.css" %}" rel="stylesheet">
   <link href="{% static "/pickadate/jquery.datetimepicker.min.css" %}" rel="stylesheet">
   <link href="{% static "/plugins/scroll/jquery.scrollbar.css" %}" rel="stylesheet">
-  <link href="{% static "/plugins/toastr/toastr.min.css" %}" rel="stylesheet" >
+  <link href="{% static "/plugins/toastr/toastr.min.css" %}" rel="stylesheet">
 
   <link rel="icon" type="image/png" href="{% static '/images/logo5.png' %}">
 
-  <style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBMW2QHSJ4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  </style>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-HBMW2QHSJ4');
+  </script>
 
 </head>
 
@@ -66,12 +75,12 @@
 
           <div class="dropdown-menu dropdown-menu-right">
 
-           <a class="dropdown-item" href="{% url "student_manual_detail" %}">Student Manual</a>
+            <a class="dropdown-item" href="{% url "student_manual_detail" %}">Student Manual</a>
 
             {% if request.user.is_authenticated %}
             <a class="dropdown-item" href="{% url "logout" %}">Sign out</a>
             {%endif%}
-            
+
           </div>
         </li>
       </ul>
